--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# Core ML/AI packages
 torch==2.6.0
 torchvision==0.21.0
 torchaudio==2.6.0
@@ -6,6 +5,7 @@ transformers==4.53.2
 accelerate==1.7.0
 peft==0.16.0
 datasets==2.19.0
+datasets==2.4.0
 
 # Data science
 numpy==1.24.4
@@ -34,6 +34,7 @@ pyspark==3.5.1
 requests==2.32.3
 pyyaml==6.0.2
 tqdm==4.65.0
+termcolor
 
 # Jupyter
 jupyter
